# codegraph-mcp

./: .gitignore  CONTRIBUTING.md  README.md  advanced_engine.py  cursorrules.template  graph_io.py  markdown_format.py  mcp_server.py  ollama_client.py  pyproject.toml  test_mcp_pipeline.py  test_semantic_skeleton.py
.github/workflows/: ci.yml
assets/: README.md
buildGraph/: __init__.py  graph_builder.py
docs/: architecture.md  configuration.md  installation.md
embeddingPipeline/: __init__.py  embedding_pipeline.py
fileParsing/: __init__.py  scanAST.py  scanWorkspace.py  trackImports.py
src/codegraph_mcp/: __init__.py  __main__.py  advanced_engine.py  cli.py  graph_io.py  markdown_format.py  server.py
src/codegraph_mcp/build_graph/: __init__.py  graph_builder.py
src/codegraph_mcp/embedding_pipeline/: __init__.py  embedding_pipeline.py
src/codegraph_mcp/file_parsing/: __init__.py  scanAST.py  scanWorkspace.py  trackImports.py
src/codegraph_mcp/templates/: __init__.py  mcp.json.fragment
src/codegraph_mcp/templates/skill/: SKILL.md
tests/: test_semantic_skeleton.py
