[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codegraph-mcp"
version = "0.1.0"
description = "MCP server for intent-based Python code discovery via call graphs in Cursor"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Sahil Sheikh" }]
keywords = ["cursor", "mcp", "graphrag", "code-search", "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "networkx>=3.0",
    "filelock>=3.12",
    "mcp>=1.0",
    "numpy>=1.24",
    "sentence-transformers>=2.2",
    "torch>=2.0",
]

[project.scripts]
codegraph-mcp = "codegraph_mcp.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "build>=1.0"]

[project.urls]
Homepage = "https://github.com/SahilSheikh12299/codegraph-mcp"
Repository = "https://github.com/SahilSheikh12299/codegraph-mcp"
Issues = "https://github.com/SahilSheikh12299/codegraph-mcp/issues"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
    "/README.md",
    "/LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
